# SIT_Coop_data

./: README.md  current_pdfs.json  fetch_coop_data.py  known_gaps.json  overrides.json  pyproject.toml  test.py
.github/: claude-settings.json
.github/workflows/: claude_auto_fix.yml  fetch_coop_data.yml  test.yml
data/: 2024_1.json  2024_10.json  2024_11.json  2024_12.json  2024_6.json  2024_7.json  2024_8.json  2024_9.json  2025_1.json  2025_11.json  2025_12.json  2025_2.json  2025_3.json  2025_4.json  2025_5.json  2025_6.json  2025_7.json  2025_9.json  2026_1.json  2026_2.json  2026_3.json  2026_4.json  2026_5.json  2026_6.json  2026_7.json  2026_8.json  coop_data.json
docs/: index.html  manifest.json  robots.txt  service-worker.js
page/: index.html
scripts/: issue_body.py  stop_hook.sh
